fix load react application

--- a/todolist/frontend/templates/frontend/index.html
+++ b/todolist/frontend/templates/frontend/index.html
@@ -6,10 +6,8 @@
   <title>Django REST with React</title>
 </head>
 <body>
-<div id="app">
-    <!-- React will load here -->
-</div>
+  <div id="app"></div>
+  {% load static %}
+  <script src="{% static "frontend/main.js" %}"></script>
 </body>
-{% load static %}
-<script src="{% static "frontend/main.js" %}"></script>
 </html>
